--- a/icons/font/flaticon.css
+++ b/icons/font/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 17/06/2020 17:55
+  	Creation date: 26/06/2020 19:46
   	*/
 
 @font-face {
@@ -30,7 +30,10 @@ font-style: normal;
 margin-left: 20px;
 }
 
-.flaticon-nail:before { content: "\f100"; }
-.flaticon-nail-polish:before { content: "\f101"; }
-.flaticon-make-up:before { content: "\f102"; }
-.flaticon-eyebrow:before { content: "\f103"; }
+.flaticon-massage:before { content: "\f100"; }
+.flaticon-pedicure:before { content: "\f101"; }
+.flaticon-manicure:before { content: "\f102"; }
+.flaticon-make-up:before { content: "\f103"; }
+.flaticon-nail:before { content: "\f104"; }
+.flaticon-eyebrow:before { content: "\f105"; }
+.flaticon-nail-polish:before { content: "\f106"; }
